# Project-3

./: Dockerfile  README.md  check.sh  compose.yaml  curl_script.sh  main.py  models.py  pyproject.toml
db/: Dockerfile  init.sh
ui/: checkJS.sh  film.html  film.jsx  index.html  main.jsx  package-lock.json  package.json  style.css  vite.config.js
