[tool.poetry]
name = "project-3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
